--- a/src/styles/rezepte.module.css
+++ b/src/styles/rezepte.module.css
@@ -4,15 +4,13 @@
   margin: auto;
   margin-bottom: 200px;
 }
-.section {
-  margin-top: 50px;
-}
 .titleInfo {
   display: flex;
   justify-content: space-between;
 }
 .section h2 {
-  margin: 10px 0;
+  text-align: center;
+  font-size: 2em;
 }
 .img {
   text-align: center;
@@ -21,11 +19,11 @@
 .img img {
   border-radius: 25px;
 }
-.recipeInfo span {
-  margin-right: 25px;
+.recipeInfo {
+  margin-top: 50px;
 }
 .zutaten h3 {
-  margin-bottom: 15px;
+  margin-bottom: 50px;
 }
 .zutaten ul {
   width: var(--body-width);
@@ -45,7 +43,7 @@
 }
 .vorwort h3,
 .zubereitung h3 {
-  margin-bottom: 10px;
+  margin-bottom: 50px;
 }
 .zubereitung p,
 .zubereitung h4 {
