--- a/src/styles/rezepte.module.css
+++ b/src/styles/rezepte.module.css
@@ -8,6 +8,9 @@
   display: flex;
   justify-content: space-between;
 }
+.section blockquote {
+  font-style: italic;
+}
 .section h2 {
   text-align: center;
   font-size: 2em;
