--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,10 +23,11 @@ main {
 nav {
   display: flex;
   justify-content: right;
+  width: 100%;
   padding: 50px 0;
 }
 nav a {
-  margin-right: 5vw;
+  margin-right: 3vw;
 }
 a {
   color: inherit;
@@ -34,7 +35,7 @@ a {
 }
 h1 {
   text-align: center;
-  font-size: 50px;
+  font-size: 4em;
 }
 ul {
   list-style: none;
